Fixed mobile view alignment of image and filter search

--- a/project/styles/base.css
+++ b/project/styles/base.css
@@ -565,6 +565,12 @@ footer {
         max-width: 100vw;
     }
 
+    main {
+        width: 90vw;
+        max-width: 350px;
+        /* margin: auto 10px; */
+    }
+
 
     .signup-btn {
         display: block;
@@ -599,7 +605,7 @@ footer {
    .dropdown-container select {
        /* width: 100vw; */
        height: 44px;
-       font-size: 1rem;
+       font-size: 0.8rem;
        font-family: Roboto, Arial, sans-serif;
        border-radius: 5px;
        margin: 0;
@@ -616,6 +622,7 @@ footer {
         box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
         transition: transform 0.4s ease box-shadow 0.3 ease;
         z-index: 1;
+        margin: 30px auto;
 
     }
 
@@ -629,11 +636,11 @@ footer {
     }
 
     .portfolio-items img {
-        width: 100vw;
+        /* width: 100vw; */
         height: auto;
         display: block;
         align-content: center;
-        margin: 10px 100px;
+        margin: 10px auto;
     }
 
     .project-title {
